Remove description of compile options