@@ -69,45 +69,6 @@ mvn javafx:jlink
 target/image/bin/java -m hellofx/org.openjfx.App
 ```
 
-### javafx:compile options
-
-When compiling with ``javafx:compile``, the source level, 
-target level and/or the release level for the Java compiler can be set. 
-The default value is 11.
-
-This configuration changes these levels to 12, for instance:
-
-```
-<plugin>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-maven-plugin</artifactId>
-    <version>0.0.4</version>
-    <configuration>
-        <source>12</source>
-        <target>12</target>
-        <release>12</release>
-        <mainClass>org.openjfx.hellofx/org.openjfx.App</mainClass>
-    </configuration>
-</plugin>
-```
-
-If required, compiler arguments can be set. For instance:
-
-```
-<plugin>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-maven-plugin</artifactId>
-    <version>0.0.4</version>
-    <configuration>
-        <compilerArgs>
-            <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.glass.ui=org.openjfx.hellofx</arg>
-        </compilerArgs>
-        <mainClass>org.openjfx.hellofx/org.openjfx.App</mainClass>
-    </configuration>
-</plugin>
-```
-
 ### javafx:run options
 
 The plugin includes by default: `--module-path`, `--add-modules` and `-classpath` options. 
